--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>الصفحة الرئيسيه</title>
 </head>
 <body>
-    <a href="todolist/files/main.html">todolist</a>
+    <a href="todolist/main.html">todolist</a>
 </body>
 </html>
